Fix contrast and style errors.

--- a/about.css
+++ b/about.css
@@ -25,6 +25,10 @@ h1 {
 	font-size: 40px;
 }
 
+a {
+	color: #0051a9;
+}
+
 .toolbar {
 	width: 100%;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
