--- a/projects.css
+++ b/projects.css
@@ -30,6 +30,10 @@ h2 {
 	font-weight: bold;
 }
 
+a {
+	color: #0051a9;
+}
+
 .toolbar {
 	width: 100%;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
